# CAD

./: .gitignore  CMakeLists.txt  README.md  USAGE_INSTRUCTIONS.md  build.bat  build.sh
include/: CADTypes.h  CADViewer.h  GeometryManager.h  KeyBindingDialog.h  MainWindow.h  MeshManager.h  PartManager.h  PreferencesDialog.h  PropertyPanel.h  ToolManager.h  TreeView.h
resources/: resources.qrc
src/: CADViewer.cpp  GeometryManager.cpp  KeyBindingDialog.cpp  MainWindow.cpp  MeshManager.cpp  NavigationCube.cpp  PartManager.cpp  PreferencesDialog.cpp  PropertyPanel.cpp  ToolManager.cpp  TreeView.cpp  main.cpp
